# tokio_php

./: .gitignore  CLAUDE.md  Cargo.toml  DOCKERHUB.md  Dockerfile  Dockerfile.debian  Dockerfile.release  README.md  build.rs  docker-compose.yml  php.ini
.githooks/: pre-commit
.github/workflows/: build.yml  dockerhub-description.yml  test.yml
certs/: cert.pem  key.pem
deploy/grafana/: tokio-php-dashboard.json
deploy/grafana/provisioning/dashboards/: dashboard.yml
deploy/grafana/provisioning/datasources/: datasource.yml
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: README.md  architecture.md  compression.md  configuration.md  distributed-tracing.md  docker.md  error-pages.md  framework-compatibility.md  graceful-shutdown.md  grpc-introduction.md  grpc.md  health-checks.md  http-methods.md  http2-tls.md  internal-server.md  logging.md  metrics.md  middleware.md  observability.md  opcache-internals.md  opcache-jit.md  php-support.md  profiler.md  profiling.md  rate-limiting.md  request-heartbeat.md  security.md  single-entry-point.md  sse-streaming.md  static-caching.md  static-files.md  superglobals.md  tokio-sapi-extension.md  worker-pool.md
ext/: config.m4  tokio_sapi.c  tokio_sapi.h
ext/bridge/: Makefile  bridge.c  bridge.h
proto/: php_service.proto
scripts/: run-integration-tests.sh
src/: bridge.rs  lib.rs  logging.rs  main.rs  php.rs  profiler.rs  server.rs  trace_context.rs  types.rs
src/config/: error.rs  executor.rs  grpc.rs  logging.rs  middleware.rs  mod.rs  parse.rs  server.rs
src/core/: context.rs  error.rs  mod.rs  request.rs  response.rs
src/diagnostics/: analyzer.rs  collector.rs  mod.rs  recommender.rs  types.rs
src/diagnostics/os/: limits.rs  linux.rs  macos.rs  mod.rs
src/diagnostics/runtime/: mod.rs  tokio_metrics.rs  worker_stats.rs
src/executor/: common.rs  ext.rs  ext_ffi.rs  mod.rs  php.rs  php_sapi.rs  sapi.rs  sapi_executor.rs  stub.rs
src/executor/pool/: error.rs  mod.rs  thread.rs
src/grpc/: conversion.rs  mod.rs  server.rs  service.rs
src/grpc/tls/: auto_cert.rs  config.rs  loader.rs  mod.rs
src/health/: checker.rs  mod.rs  status.rs
src/listener/: mod.rs  tcp.rs  tls.rs
src/middleware/: access_log.rs  chain.rs  compression.rs  error_pages.rs  mod.rs  rate_limit.rs  static_cache.rs
src/observability/: metrics.rs  mod.rs  otel.rs  tracing_middleware.rs
src/sapi/: callbacks.rs  context.rs  ffi.rs  functions.rs  mod.rs  module.rs
src/server/: access_log.rs  builder.rs  config.rs  connection.rs  error_pages.rs  file_cache.rs  internal.rs  mod.rs  rate_limit.rs  routing.rs
src/server/request/: mod.rs  multipart.rs  parser.rs
src/server/response/: compression.rs  mod.rs  static_file.rs  streaming.rs
src/system/: cgroup.rs  memory.rs  mod.rs
tests/: bench_sse.sh  test_sse.sh
tests/integration/: compression.rs  error_pages.rs  helpers.rs  http_basic.rs  internal_server.rs  mod.rs  php_execution.rs  rate_limiting.rs  sse.rs  static_files.rs
www/: TokioPhpFormatter.php  _tabs.php  accelerator_check.php  api.php  config_hash_test.php  cookie.php  ext_check.php  ext_debug.php  ext_test.php  extensions_check.php  form.php  headers.php  hello.php  index.php  ini_check.php  jit_test.php  method.php  modules.php  oc_config.php  opcache_callback_test.php  opcache_check.php  opcache_debug.php  opcache_debug2.php  opcache_detail.php  opcache_fixed.php  opcache_full_debug.php  opcache_internal_check.php  opcache_phpinfo.php  opcache_status.php  opcache_thread_test.php  php_info.php  preload.php  redirect.php  sapi_check.php  sapi_module_test.php  server_vars.php  session.php  slow.php  styles.css  test.css  (+26 more)
www/errors/: 404.html  500.html  503.html
www/examples/grpc/: .gitignore  README.md  api_example.php  composer.json  go_client.go  php_client.php  python_client.py  test_grpc.sh
