[package]
name = "tokio_php"
version = "0.1.0"
edition = "2021"

[features]
default = ["php"]
php = []
stub = []

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "fs", "sync", "signal", "macros"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
bytes = "1"
libc = "0.2"
mime_guess = "2"
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multer = "3"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
socket2 = { version = "0.5", features = ["all"] }
num_cpus = "1"
async-trait = "0.1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
brotli = "7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-test = "0.4"

# Integration tests run against a Docker container, not linked with PHP
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true
# These tests don't depend on the tokio_php library itself,
# they only make HTTP requests to a running server

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
