[package]
name = "tokio_php"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokio_php"
path = "src/lib.rs"

[[bin]]
name = "tokio_php"
path = "src/main.rs"

[features]
default = ["php"]
php = []
# Pure Rust SAPI implementation (eliminates C extension dependency)
tokio-sapi = ["php"]
stub = []
# Debug profiling: single-worker mode, writes detailed reports to /tmp/tokio_profile_request_{id}.md
debug-profile = []
# gRPC server for microservices architecture
grpc = ["tonic", "prost", "tonic-build", "rcgen", "x509-parser", "time"]
# OpenTelemetry distributed tracing
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "tracing-opentelemetry",
]

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "fs", "sync", "signal", "macros"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
http = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
bytes = "1"
libc = "0.2"
mime_guess = "2"
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multer = "3"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
socket2 = { version = "0.5", features = ["all"] }
num_cpus = "1"
async-trait = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
brotli = "7"

# gRPC (optional)
tonic = { version = "0.12", optional = true, features = ["tls"] }
prost = { version = "0.13", optional = true }

# gRPC TLS certificate generation (optional)
rcgen = { version = "0.13", optional = true }
x509-parser = { version = "0.16", optional = true }
time = { version = "0.3", optional = true }

# OpenTelemetry (optional)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Prometheus metrics
prometheus = "0.13"
regex = "1"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-test = "0.4"
tempfile = "3"

# Integration tests run against a Docker container, not linked with PHP
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true
# These tests don't depend on the tokio_php library itself,
# they only make HTTP requests to a running server

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
